# golden-app

./: compose.yaml
backend/: .coverage  .env  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  settings.py  utils.py
backend/app/routes/: user.py
backend/migrations/versions/: 8af7705440fe_create_users_table.py
backend/tests/: conftest.py  factories.py  test_app.py  test_db.py  test_user.py
